--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   loading_indicator: ^2.1.1
   google_fonts: ^2.1.0
   intl: ^0.17.0
+  slide_to_confirm: ^1.1.0
 
 dev_dependencies:
   flutter_test:
