--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,10 @@ dependencies:
   intl: ^0.17.0
   json_annotation: ^4.3.0
   slide_to_confirm: ^1.1.0
+  loading_overlay: ^0.3.0
 
 dev_dependencies:
-  build_runner:
+  build_runner: ^2.1.5
   json_serializable:
   flutter_test:
     sdk: flutter
