--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   json_annotation: ^4.3.0
   slide_to_confirm: ^1.1.0
   loading_overlay: ^0.3.0
+  flutter_native_splash: ^1.3.2
 
 dev_dependencies:
   build_runner: ^2.1.5
